--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Jonathan Almeida, desenvolvedor Front-end com especialidade em <strong>HTML e CSS</strong>. Ajudo pequenos negócios e designers a implementarem suas boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
             <h2 class="apresentacao__links_subtitulo">Acesse minhas redes sociais</h2>
-            <a class="apresentacao__links__botao" href="https://www.instagram.com/meta_jon.exe/" alt="Link para o instagram"> 
+            <a class="apresentacao__links__botao" href="https://www.instagram.com/jonathanasf_/" alt="Link para o instagram"> 
               <img src="./assets/instagram.png">Instagram </a>
             <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/jonathanasf" alt="Link para o linkedin"> 
               <img src="./assets/linkedin.png">Linkedin</a>
