--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
-            class="titulo-destaque">com um Front-end de qualidade!
+            <h1 class="apresentacao__conteudo__titulo">Conheça o profissional <strong
+                class="titulo-destaque">mais versátil da atualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Jonathan Almeida, desenvolvedor Front-end com especialidade em <strong>HTML e CSS</strong>. Ajudo pequenos negócios e designers a implementarem suas boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Jonathan Almeida, sou estudande de <strong>Ciência da computação Desenvolvedor de Softwares e Designer!</strong>  </p>
             <div class="apresentacao__links">
-            <h2 class="apresentacao__links_subtitulo">Acesse minhas redes sociais</h2>
+            <h2 class="apresentacao__links_subtitulo">Entre em contato pelas minhas redes sociais </h2>
+            <img src="./assets/Seta.png">
             <a class="apresentacao__links__botao" href="https://www.instagram.com/jonathanasf_/" alt="Link para o instagram"> 
               <img src="./assets/instagram.png">Instagram </a>
             <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/jonathanasf" alt="Link para o linkedin"> 
