--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     <section class="apresentacao__conteudo">
       <h1 class="apresentacao__conteudo__titulo">Quem sou eu?</h1>
       <p class="apresentacao__conteudo__texto">Meu nome é Jonathan, tenho 20 anos de idade e estou atualmente no <strong>4ºsemestre</strong> da graduação de <strong>Ciência da Computação!</strong></p>
-      <p class="apresentacao__conteudo__texto">No meu tempo livre desenvolvo diversos projetos profissionais baseados em diversas áreas da tecnologia com o intuito de praticar e conhecer o máximo de ferramenteas que for possível, portanto, dentre as linguagens de programação que eu possuo projeto estão Python, Java,javascript, C e linguagens para Web, como html e css!</p>
-      <p class="apresentacao__conteudo__texto">Participo também de diversos Workshops, probjetos de imersões dentre outros eventos que possuem alguma relação com a área de T.I. Dentre essas experiências foi possível conhecer a ferramenta Figma, desenvolver projetos simples de bancos de dados e entender como funciona o mercado de tecnologia da informação.</p>
+      <p class="apresentacao__conteudo__texto">No meu tempo livre desenvolvo diversos projetos pessoais baseados em diversas áreas da tecnologia com o intuito de praticar e conhecer o máximo de ferramenteas que for possível, portanto, dentre as linguagens de programação que eu possuo projetos estão <strong>Python, Java,javascript, C </strong> e linguagens para Web, como <strong>html e css!</strong> </p>
+      <p class="apresentacao__conteudo__texto">Participo também de diversos Workshops, imersões dentre outros eventos que possuem alguma relação com a área de T.I. Dentre essas experiências foi possível conhecer a ferramenta Figma, desenvolver projetos simples de bancos de dados e entender como funciona o mercado de tecnologia da informação.</p>
       <p class="apresentacao__conteudo__texto">Minha paixão por conhecimento ultrapassa o nicho de desenvolvimento de software e gerencimento de dados, alcançando os príncipios de designe e até mesmo animações de artes vetoriais.</p>
     </section>
 
