--- a/curriculum.html
+++ b/curriculum.html
@@ -32,7 +32,7 @@
                 <li class="linguagens__softwares">Html/Css</li>
                 <li class="linguagens__softwares">Javascript</li>
                 <li class="linguagens__softwares">Python</li>
-                <p  class="github"> Para acessar meus repositórios feitos nestas linguagens <a href="https://github.com/JonathanAsf" class="github__link"> Clique Aqui</a> </p>
+                <p  class="github"> Para acessar meus repositórios feitos nestas linguagens <a href="https://github.com/JonathanAsf?tab=repositories" class="github__link"> Clique Aqui</a> </p>
                 <br>
                 <li class="titulo__linguagens"><strong>Softwares</strong></li>
                 <li class="linguagens__softwares"> Figma</li>
