Update and rename about.html to pt-br/sobre_mim_pt-br.html
Movimentado para uma pasta pt-br 
Nome do arquivo alterado
Referências para estilo e imagens alterados

--- a/pt-br/sobre_mim_pt-br.html
+++ b/pt-br/sobre_mim_pt-br.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About me</title>
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="shortcut icon" href="./assets/logotipo_branco.png" type="image/x-icon">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
 </head>
 <body>
   <header class="cabecalho">
     <nav class="cabecalho__menu">
-      <a class="cabecalho__menu__link" href="./index.html">Home</a>
-      <a class="cabecalho__menu__link" href="./about.html">Sobre</a>
-      <a class="cabecalho__menu__link" href="./curriculum.html">Meu curriculo</a>
+      <a class="cabecalho__menu__link" href="./home_pt-br.html">Home</a>
+      <a class="cabecalho__menu__link" href="./sobre_mim_pt-br.html">Sobre</a>
+      <a class="cabecalho__menu__link" href="./curriculum_pt-br.html">Meu curriculo</a>
+      <a class="cabecalho__menu__link" href="../linguagem.html">Linguagem</a>
     </nav>
   </header>
   <main class="apresentacao">
-    <img class="apresentacao__imagem" src="./assets/logotipo_branco.png" alt="logotipo imagem">
+    <img class="apresentacao__imagem" src="../assets/logotipo_branco.png" alt="logotipo imagem">
     <section class="apresentacao__conteudo">
       <h1 class="apresentacao__conteudo__titulo">Quem sou eu?</h1>
       <p class="apresentacao__conteudo__texto">Meu nome é Jonathan, tenho 20 anos de idade e estou atualmente no <strong>4ºsemestre</strong> da graduação de <strong>Ciência da Computação!</strong></p>
