Update and rename curriculum.html to pt-br/curriculum_pt-br.html
Movimentado para a pasta pt-br 
Nome do arquivo alterado
Referências para estilo e imagens alterados

--- a/pt-br/curriculum_pt-br.html
+++ b/pt-br/curriculum_pt-br.html
@@ -6,23 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="./styles/curriculo.css">
-    <link rel="shortcut icon" href="./assets/logotipo_branco.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/curriculo.css">
+    <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre</a>
-            <a class="cabecalho__menu__link" href="curriculum.html">Meu curriculo</a>
+            <a class="cabecalho__menu__link" href="home_pt-br.html">Home</a>
+            <a class="cabecalho__menu__link" href="sobre_mim_pt-br.html">Sobre</a>
+            <a class="cabecalho__menu__link" href="curriculum_pt-br.html">Meu curriculo</a>
+            <a class="cabecalho__menu__link" href="../linguagem.html">Linguagem</a>
         </nav>
     </header>
     <main class="apresentacao">
     
         <section class="apresentacao__conteudo">
-            <img class="apresentacao__imagem" src="./assets/logotipo_branco.png" alt="Foto representativa do perfil">
+            <img class="apresentacao__imagem" src="../assets/logotipo_branco.png" alt="Foto representativa do perfil">
             <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo titulo-destaque">Hard Skills</h1>
             <ul class="apresentacao__conteudo__texto">
