Update and rename index.html to pt-br/home_pt-br.html
Movimentado para a pasta pt-br 
Nome do arquivo alterado
Referências para estilos e imagens alterados

--- a/pt-br/home_pt-br.html
+++ b/pt-br/home_pt-br.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="shortcut icon" href="./assets/logotipo_branco.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre</a>
-            <a class="cabecalho__menu__link" href="curriculum.html">Meu curriculo</a>
+            <a class="cabecalho__menu__link" href="home_pt-br.html">Home</a>
+            <a class="cabecalho__menu__link" href="sobre_mim_pt-br.html">Sobre</a>
+            <a class="cabecalho__menu__link" href="curriculum_pt-br.html">Meu curriculo</a>
+            <a class="cabecalho__menu__link" href="../linguagem.html">Linguagem</a>
         </nav>
     </header>
     <main class="apresentacao">
-        <img class="apresentacao__imagem" src="./assets/logotipo_branco.png" alt="Foto representativa do perfil">
+        <img class="apresentacao__imagem" src="../assets/logotipo_branco.png" alt="Foto representativa do perfil">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Conheça o profissional <strong
                 class="titulo-destaque">mais versátil da atualidade!
@@ -27,13 +28,13 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Jonathan Almeida, sou estudande de <strong>Ciência da computação Desenvolvedor de Softwares e Designer!</strong>  </p>
             <div class="apresentacao__links">
             <h2 class="apresentacao__links_subtitulo">Entre em contato pelas minhas redes sociais </h2>
-            <img src="./assets/Seta.png">
+            <img src="../assets/Seta.png">
             <a class="apresentacao__links__botao" href="https://www.instagram.com/jonathanasf_/" alt="Link para o instagram"> 
-              <img src="./assets/instagram.png">Instagram </a>
+              <img src="../assets/instagram.png">Instagram </a>
             <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/jonathanasf" alt="Link para o linkedin"> 
-              <img src="./assets/linkedin.png">Linkedin</a>
+              <img src="../assets/linkedin.png">Linkedin</a>
             <a class="apresentacao__links__botao" href="https://github.com/JonathanAsf" alt="Direcionamento para o Github"> 
-              <img src="./assets/github.png"> Github </a> 
+              <img src="../assets/github.png"> Github </a> 
           </div>
       </section>
         
