--- a/pt-br/sobre_mim_pt-br.html
+++ b/pt-br/sobre_mim_pt-br.html
@@ -13,7 +13,7 @@
       <a class="cabecalho__menu__link" href="./home_pt-br.html">Home</a>
       <a class="cabecalho__menu__link" href="./sobre_mim_pt-br.html">Sobre</a>
       <a class="cabecalho__menu__link" href="./curriculum_pt-br.html">Meu curriculo</a>
-      <a class="cabecalho__menu__link" href="../linguagem.html">Linguagem</a>
+      <a class="cabecalho__menu__link" href="../index.html">Linguagem</a>
     </nav>
   </header>
   <main class="apresentacao">
