--- a/en/home_en.html
+++ b/en/home_en.html
@@ -16,7 +16,7 @@
             <a class="cabecalho__menu__link" href="home_en.html">Home</a>
             <a class="cabecalho__menu__link" href="about_me_en.html">About me</a>
             <a class="cabecalho__menu__link" href="curriculum_en.html">Curriculum</a>
-            <a class="cabecalho__menu__link" href="../linguagem.html">Language</a>
+            <a class="cabecalho__menu__link" href="../index.html">Language</a>
         </nav>
     </header>
     <main class="apresentacao">
