--- a/pt-br/curriculum_pt-br.html
+++ b/pt-br/curriculum_pt-br.html
@@ -58,15 +58,15 @@
       <section class="apresentacao__conteudo">
           <h3 class="apresentacao__conteudo__subtitulo">Tribunal de contas</h3>
             <p class="apresentacao__conteudo__texto">
-              Cargo: Estagiário de TI
-              Período: 2019 - 2020
+              Cargo: Estagiário de TI <br>
+              Período: 2019 - 2020 <br>
               Atividades: Identificar e solucionar problemas relacionados aos computadores, microcomputadores, rede e incompatibilidades em navegadores, orientação de utilização a VPN e ferramentas exclusivas da organização e suporte aos demais problemas relacionados à máquinas.  
             </p>
           
           <h3 class="apresentacao__conteudo__subtitulo">Griffon LTDA</h3>
             <p class="apresentacao__conteudo__texto">
-              Cargo: Operador de computador e microcomputador
-              Período: 2021 – Atualmente
+              Cargo: Operador de computador e microcomputador <br>
+              Período: 2021 – Atualmente <br>
               Atividades desenvolvidas: Marcação de padronização em processos eletrônicos emitidos pelos órgãos públicos utilizando a linguagem Regex, tratamento de pdf e conferência de atividades finais.
             </p>
         </section>
