--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Language</title>
+    <title>Portfolio</title>
 
     <link rel="shortcut icon" href="./assets/logotipo_branco.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
