--- a/pt-br/home_pt-br.html
+++ b/pt-br/home_pt-br.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Página Principal</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
 </head>
@@ -25,12 +25,10 @@
             <h1 class="apresentacao__conteudo__titulo">Conheça o profissional <strong
                 class="titulo-destaque">mais versátil da atualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Jonathan Almeida, sou estudande de <strong>Ciência da computação Desenvolvedor de Softwares e Designer!</strong>  </p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Jonathan Almeida, sou estudande de <strong> Ciência da computação Desenvolvedor de Softwares e Designer!</strong>  </p>
             <div class="apresentacao__links">
-            <h2 class="apresentacao__links_subtitulo">Entre em contato pelas minhas redes sociais </h2>
+            <h2 class="apresentacao__links_subtitulo">Entre em contato pelas minhas redes sociais profissionais </h2>
             <img src="../assets/Seta.png">
-            <a class="apresentacao__links__botao" href="https://www.instagram.com/jonathanasf_/" alt="Link para o instagram"> 
-              <img src="../assets/instagram.png">Instagram </a>
             <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/jonathanasf" alt="Link para o linkedin"> 
               <img src="../assets/linkedin.png">Linkedin</a>
             <a class="apresentacao__links__botao" href="https://github.com/JonathanAsf" alt="Direcionamento para o Github"> 
