--- a/pt-br/sobre_mim_pt-br.html
+++ b/pt-br/sobre_mim_pt-br.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About me</title>
+  <title>Sobre mim</title>
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
 </head>
@@ -16,17 +16,16 @@
       <a class="cabecalho__menu__link" href="../index.html">Linguagem</a>
     </nav>
   </header>
+  
   <main class="apresentacao">
-    <img class="apresentacao__imagem" src="../assets/logotipo_branco.png" alt="logotipo imagem">
-    <section class="apresentacao__conteudo">
-      <h1 class="apresentacao__conteudo__titulo">Quem sou eu?</h1>
-      <p class="apresentacao__conteudo__texto">Meu nome é Jonathan, tenho 20 anos de idade e estou atualmente no <strong>4ºsemestre</strong> da graduação de <strong>Ciência da Computação!</strong></p>
-      <p class="apresentacao__conteudo__texto">No meu tempo livre desenvolvo diversos projetos pessoais baseados em diversas áreas da tecnologia com o intuito de praticar e conhecer o máximo de ferramenteas que for possível, portanto, dentre as linguagens de programação que eu possuo projetos estão <strong>Python, Java,javascript, C </strong> e linguagens para Web, como <strong>html e css!</strong> </p>
-      <p class="apresentacao__conteudo__texto">Participo também de diversos Workshops, imersões dentre outros eventos que possuem alguma relação com a área de T.I. Dentre essas experiências foi possível conhecer a ferramenta Figma, desenvolver projetos simples de bancos de dados e entender como funciona o mercado de tecnologia da informação.</p>
-      <p class="apresentacao__conteudo__texto">Minha paixão por conhecimento ultrapassa o nicho de desenvolvimento de software e gerencimento de dados, alcançando os príncipios de designe e até mesmo animações de artes vetoriais.</p>
-    </section>
-
-
+      <img class="apresentacao__imagem" src="../assets/logotipo_branco.png" alt="logotipo imagem">
+      <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">Quem sou eu?</h1>
+          <p class="apresentacao__conteudo__texto">Meu nome é Jonathan, tenho 20 anos de idade e estou atualmente no <strong>4ºsemestre</strong> da graduação de <strong>Ciência da Computação!</strong></p>
+          <p class="apresentacao__conteudo__texto">No meu tempo livre desenvolvo diversos projetos pessoais baseados em diversas áreas da tecnologia com o intuito de praticar e conhecer o máximo de ferramenteas que for possível, portanto, dentre as linguagens de programação que eu possuo projetos estão <strong> Python, Java, javascript, C </strong> e linguagens para Web, como <strong> html e css!</strong> </p>
+          <p class="apresentacao__conteudo__texto">Participo também de diversos Workshops, imersões dentre outros eventos que possuem alguma relação com a área de T.I. Dentre essas experiências foi possível conhecer a ferramenta Figma, desenvolver projetos simples de bancos de dados e entender como funciona o mercado de tecnologia da informação.</p>
+          <p class="apresentacao__conteudo__texto">Minha paixão por conhecimento ultrapassa o nicho de desenvolvimento de software e gerencimento de dados, alcançando os príncipios de design e até mesmo animações de artes vetoriais.</p>
+      </section>
 
 </main>
 
