--- a/en/home_en.html
+++ b/en/home_en.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
 </head>
@@ -25,16 +25,14 @@
             <h1 class="apresentacao__conteudo__titulo"> Meet today's <strong
                 class="titulo-destaque"> the most versalite professional!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Hi! My name is Jonathan Almeida, I'm a <strong>Science computer student, Software developer and Designer!</strong>  </p>
-            <div class="apresentacao__links">
-            <h2 class="apresentacao__links_subtitulo">Follow me in my social medias</h2>
-            <img src="../assets/Seta.png">
-            <a class="apresentacao__links__botao" href="https://www.instagram.com/jonathanasf_/" alt="Link para o instagram"> 
-              <img src="../assets/instagram.png">Instagram </a>
-            <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/jonathanasf" alt="Link para o linkedin"> 
-              <img src="../assets/linkedin.png">Linkedin</a>
-            <a class="apresentacao__links__botao" href="https://github.com/JonathanAsf" alt="Direcionamento para o Github"> 
-              <img src="../assets/github.png"> Github </a> 
+                <p class="apresentacao__conteudo__texto">Hi! My name is Jonathan Almeida, I'm a <strong> Science computer student, Software developer and Designer! </strong>  </p>
+                <div class="apresentacao__links">
+                <h2 class="apresentacao__links_subtitulo">Follow me in my social medias</h2>
+                <img src="../assets/Seta.png">
+                <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/jonathanasf" alt="Link para o linkedin"> 
+                  <img src="../assets/linkedin.png">Linkedin</a>
+                <a class="apresentacao__links__botao" href="https://github.com/JonathanAsf" alt="Direcionamento para o Github"> 
+                  <img src="../assets/github.png"> Github </a> 
           </div>
       </section>
         
