--- a/en/curriculum_en.html
+++ b/en/curriculum_en.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Curriculum</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/curriculo.css">
     <link rel="shortcut icon" href="../assets/logotipo_branco.png" type="image/x-icon">
@@ -28,7 +28,7 @@
             <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo titulo-destaque">Hard Skills</h1>
             <ul class="apresentacao__conteudo__texto">
-                <li class="titulo__linguagens"><strong>Projects in programing languages</strong></li>
+                <li class="titulo__linguagens"><strong> Projects in programing languages </strong></li>
                 <li class="linguagens__softwares"> C</li>
                 <li class="linguagens__softwares">Java</li>
                 <li class="linguagens__softwares">Html/Css</li>
@@ -42,7 +42,6 @@
                 <li class="linguagens__softwares"> Adobe Photoshop</li>
                 <li class="linguagens__softwares"> Adobe Premiere</li>
                 <li class="linguagens__softwares"> Adobe After Effects</li> 
-               
               </br>
             </ul>
       </section>
