--- a/en/about_me_en.html
+++ b/en/about_me_en.html
@@ -21,10 +21,10 @@
     <img class="apresentacao__imagem" src="../assets/logotipo_branco.png" alt="logotipo imagem">
     <section class="apresentacao__conteudo">
       <h1 class="apresentacao__conteudo__titulo">Who am I?</h1>
-      <p class="apresentacao__conteudo__texto">My name is Jonathan,I'm 20 years oldand I'm in the<strong> 4º period</strong> of my graduation in <strong>Computer Science</strong></p>
-      <p class="apresentacao__conteudo__texto">In my free time I develop some projets based in a lot of tecnology setor with the objetive to pratice my knowledge and know the maximum of tools that is possible to know. I have some projects in the following languages of programing:  <strong>Python, Java, javascript, C </strong> and web languages like <strong>html e css!</strong> </p>
-      <p class="apresentacao__conteudo__texto">I participate in a lot of events that have relation with tecnology like Workshops, courses, live coding and chalenges. I could have experience using the tool Figma and develop a simple project of database.</p>
-      <p class="apresentacao__conteudo__texto">My passion for knowledge goes beyond the niche of software development and data management to design principles and even vector art animations..</p>
+        <p class="apresentacao__conteudo__texto">My name is Jonathan,I'm 20 years oldand I'm in the<strong> 4º period</strong> of my graduation in <strong>Computer Science</strong></p>
+        <p class="apresentacao__conteudo__texto">In my free time I develop some projets based in professional situations with the objetive to pratice my knowledge and know the maximum of tools that is possible to know. I have some projects in the following languages of programing:  <strong> Python, Java, javascript, C </strong> and web languages like <strong>html e css! </strong> </p>
+        <p class="apresentacao__conteudo__texto">I participate in a lot of events that have relation with tecnology like Workshops, courses, live coding and chalenges. I could have experience using the tool Figma and develop a simple project of database.</p>
+        <p class="apresentacao__conteudo__texto">My passion for knowledge goes beyond the niche of software development and data management to design principles and even vector art animations..</p>
     </section>
 
 
