Melhora na exibição do conteúdo|Adição de hover|Mudança de cores|Adição de borda.

--- a/en/curriculum_en.html
+++ b/en/curriculum_en.html
@@ -57,7 +57,7 @@
         <h2  class="apresentacao__conteudo__titulo titulo-destaque">Professional experience</h2>
       </section>
       <section class="apresentacao__conteudo">
-          <h3 class="apresentacao__conteudo__subtitulo">Tribunal de contas</h3>
+          <h3 class="apresentacao__conteudo__subtitulo">Tribunal de Contas do Município de São Paulo<br>(TCM-SP)</h3>
             <p class="apresentacao__conteudo__texto">
               Job title: IT Trainee <br>
               Working period: 2019 - 2020 <br>
@@ -75,7 +75,7 @@
         </section>
 
         <section class="apresentacao__conteudo">
-                <h2 class="apresentacao__conteudo__titulo"> Languages</h2>
+                <h2 class="apresentacao__conteudo__titulo titulo-destaque"> Languages</h2>
                       <h3 class="apresentacao__conteudo__subtitulo">English </h3>
                         <ul>
                           <li class="idiomas">Institution: Number One; YouMove; WiseUp Live</li>
