--- a/pt-br/curriculum_pt-br.html
+++ b/pt-br/curriculum_pt-br.html
@@ -55,7 +55,7 @@
         <h2  class="apresentacao__conteudo__titulo titulo-destaque">Experiências profissionais</h2>
     </section>
     <section class="apresentacao__conteudo">
-        <h3 class="apresentacao__conteudo__subtitulo">Tribunal de Contas do Município de São Paulo</h3>
+        <h3 class="apresentacao__conteudo__subtitulo">Tribunal de Contas do Município de São Paulo<br>(TCM-SP)</h3>
             <p class="apresentacao__conteudo__texto">
             Cargo: Estagiário de TI <br>
             Período: 2019 - 2020 <br>
@@ -71,7 +71,7 @@
     </section>
 
     <section class="apresentacao__conteudo">
-            <h2 class="apresentacao__conteudo__titulo"> Idiomas</h2>
+            <h2 class="apresentacao__conteudo__titulo titulo-destaque"> Idiomas</h2>
                 <h3 class="apresentacao__conteudo__subtitulo">Inglês </h3>
                     <ul>
                     <li class="idiomas">Instituição: Number One; YouMove; WiseUp Live</li>
